--- a/src/Components/Galaxies/Galaxies.css
+++ b/src/Components/Galaxies/Galaxies.css
@@ -227,7 +227,7 @@
     width: 100%;
     display: block;
     background:
-        url('dark-denim.png') no-repeat center center,
+        url('../../../public/dark-denim.png') no-repeat center center,
         linear-gradient(to bottom, #1a1a1a, #400000, #b22222);
     background-size: auto, cover;
     color: white;
