--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -57,25 +57,25 @@
 
 
 .co-img1{
-    background: url("khush.jpeg") center no-repeat;
+    background: url("../../../public/khush.jpeg") center no-repeat;
     width: 100%;
     height: 100%;
     background-size: cover;
 }
 .co-img2{
-    background: url("loki.jpeg") center no-repeat;
+    background: url("../../../public/loki.jpeg") center no-repeat;
     width: 100%;
     height: 100%;
     background-size: cover;
 }
 .co-img3{
-    background: url("muzz.jpeg") center no-repeat;
+    background: url("../../../public/muzz.jpeg") center no-repeat;
     width: 100%;
     height: 100%;
     background-size: cover;
 }
 .co-img4{
-    background: url("sahil.jpeg") center no-repeat;
+    background: url("../../../public/sahil.jpeg") center no-repeat;
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -86,7 +86,7 @@ section {
 }
 
 .contact-hero {
-    background: url('con-img.jpeg') no-repeat center;
+    background: url('../../../public/con-img.jpeg') no-repeat center;
     background-size: cover;
     color: rgb(0, 0, 0);
     text-align: center;
@@ -227,7 +227,7 @@ footer .f-container {
 
 @media(max-width:1131px) {
     .cos-img {
-        background: url("cos.png") center no-repeat;
+        background: url("../../../public/cos.png") center no-repeat;
         background-size: cover;
         height: inherit;
         transform: scale(1);
